# just-bashit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  jb.toml  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  makefile.yml  release.yml
docs/: changelog.md  getting-started.md  index.md  inspect.md  install-deps.md  jb.md  just-runit.md  llms.txt  release.md  templates.md
docs/libraries/: datetime.md  environment.md  file.md  format.md  logging.md  match.md  network.md  path.md  pkg.md  toml.md
docs/stylesheets/: extra.css
src/: datetime.sh  environment.sh  file.sh  format.sh  function-template.sh  get-jb.sh  inspect.sh  install-deps.sh  jr  just-runit  logging.sh  match.sh  network.sh  path.sh  pkg.sh  script-template  template.toml  toml.sh
src/just_bashit/: __init__.py  _launcher.py  format.sh  pkg.sh  script-template
test/: datetime.bats  environment.bats  fetch.bats  file.bats  format.bats  function-template.bats  inspect.bats  install-deps.bats  logging.bats  match.bats  network.bats  path.bats  pkg.bats  toml.bats
test/test_helper/: common-setup.bash
