[build-system]
requires = ["just-buildit"]
build-backend = "just_buildit"

[tool.just-buildit]
pure = true

[project]
name = "git-bash-ed"
version = "0.1.4"
description = "Evolving set of auto-formatted, bats-tested, shellcheck-linted tools, templates, and more."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Matthew T Hunter", email = "matthew.t.hunter@aero.org" },
]

[dependency-groups]
dev = [
    "pre-commit",
]

[[tool.poetry_bumpversion.replacements]]
files = [
    "src/datetime.sh",
    "src/environment.sh",
    "src/file.sh",
    "src/format.sh",
    "src/function-template.sh",
    "src/logging.sh",
    "src/match.sh",
    "src/network.sh",
    "src/path.sh",
    "src/script-template",
]
search='# PACKAGE: git-bash-ed version {current_version}                                         #'
replace='# PACKAGE: git-bash-ed version {new_version}                                         #'
