[build-system]
requires = ["just-buildit"]
build-backend = "just_buildit"

[tool.just-buildit]
pure = true

[project]
name = "just-bashit"
version = "0.1.7"
description = "Evolving set of auto-formatted, bats-tested, shellcheck-linted tools, templates, and more."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Matthew T Hunter", email = "matthew.t.hunter@aero.org" },
]

[dependency-groups]
dev = [
    "pre-commit",
]

[tool.bumpversion]
current_version = "0.1.7"
commit = true
tag = true
tag_name = "v{new_version}"
message = "chore: release v{new_version}"

[[tool.bumpversion.files]]
filename = "src/datetime.sh"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/environment.sh"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/file.sh"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/format.sh"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/function-template.sh"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/install-deps.sh"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/just-runit"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/logging.sh"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/match.sh"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/network.sh"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/path.sh"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/get-jb.sh"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/script-template"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/inspect.sh"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/pkg.sh"
search = "# PACKAGE: just-bashit version {current_version}                                        #"
replace = "# PACKAGE: just-bashit version {new_version}                                        #"

[[tool.bumpversion.files]]
filename = "src/toml.sh"
search = "# PACKAGE: just-bashit version {current_version}                                        #"
replace = "# PACKAGE: just-bashit version {new_version}                                        #"
