[build-system]
requires = ["just-buildit"]
build-backend = "just_buildit"

[tool.just-buildit]
pure = true

[project]
name = "just-bashit"
version = "0.2.0"
description = "Evolving set of auto-formatted, bats-tested, shellcheck-linted tools, templates, and more."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Matthew T Hunter", email = "matthew.t.hunter@aero.org" },
]
keywords = ["bash", "shell", "scripting", "cli", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Other Scripting Engines",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]

[project.scripts]
jb     = "just_bashit._launcher:jb"
jbx    = "just_bashit._launcher:jbx"
jb-inspect = "just_bashit._launcher:jb_inspect"

[project.urls]
Homepage      = "https://just-buildit.github.io/just-bashit/"
Repository    = "https://github.com/just-buildit/just-bashit"
Documentation = "https://just-buildit.github.io/just-bashit/"
Changelog     = "https://github.com/just-buildit/just-bashit/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pre-commit",
    "zensical>=0.0.29; python_version >= '3.10'",
]

[tool.bumpversion]
current_version = "0.2.0"
commit = true
tag = true
tag_name = "v{new_version}"
message = "chore: release v{new_version}"

[[tool.bumpversion.files]]
filename = "src/just_bashit/datetime.sh"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/just_bashit/environment.sh"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/just_bashit/file.sh"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/just_bashit/format.sh"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/just_bashit/function-template.sh"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/just_bashit/install-deps.sh"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/just_bashit/just-runit"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/just_bashit/logging.sh"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/just_bashit/match.sh"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/just_bashit/network.sh"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/just_bashit/path.sh"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/just_bashit/get-jb.sh"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/just_bashit/script-template"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/just_bashit/inspect.sh"
search = "# PACKAGE: just-bashit version {current_version}                                         #"
replace = "# PACKAGE: just-bashit version {new_version}                                         #"

[[tool.bumpversion.files]]
filename = "src/just_bashit/pkg.sh"
search = "# PACKAGE: just-bashit version {current_version}                                        #"
replace = "# PACKAGE: just-bashit version {new_version}                                        #"

[[tool.bumpversion.files]]
filename = "src/just_bashit/toml.sh"
search = "# PACKAGE: just-bashit version {current_version}                                        #"
replace = "# PACKAGE: just-bashit version {new_version}                                        #"
